<resources>
    <string name="app_name">Memory Game</string>

    <string name="nameTextView">Your Full Name</string>
    <string name="nameEditText">Please enter your full name</string>
    <string name="defaultName">ישראל ישראלי</string>
    <string name="ageTextView">Your Age</string>
    <string name="ageEditText">Please enter your age</string>
    <string name="defaultAge">70</string>
    <string name="greetings">Welcome to my memory game</string>
    <string name="buttonFinished">Continue</string>

    <string name="helloTO">Player Name :</string>
    <string name="whoIsAged">Player Age : </string>
    <string name="selectDifficulty">Please select a difficulty</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">HARD</string>

    <string name="secondInMilli">1000</string>
    <string name="easyTime">30</string>
    <string name="mediumTime">45</string>
    <string name="hardTime">60</string>

    <string name="youLose">Time\'s Up! you lose, better luck next time</string>
    <string name="secondsLeft1">You have: </string>
    <string name="secondsLeft2">seconds left </string>
    <string name="youWon">You WON!!!!!</string>
    <string name="youWonTryAHarderLevel">You are good try a harder level</string>
    <string name="youAreAMaster">WOW YOU WON THE HARD LEVEL YOU ARE A MASTER!!!!</string>
</resources>
